form is aligned, background image is in the correct position

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,6 +13,18 @@ html {
   hanging-punctuation: first last; /* Not supported in Chrome */
 }
 
+input{
+  display: block;
+}
+
+select{
+  display: block;
+}
+
+textarea{
+  display: block;
+}
+
 body {
   min-height: 100vh;
 }
